DRUP-1002: #ready fixes give now button wrapping on small screens for logged in users

--- a/www/sites/all/themes/uclalib_omega/css/uclalib-omega.no-query.css
+++ b/www/sites/all/themes/uclalib_omega/css/uclalib-omega.no-query.css
@@ -1890,6 +1890,10 @@ a.more-link,
   .logged-in .l-header .menu li:after {
     content: "";
   }
+
+  .logged-in .l-header {
+    padding-left: 15px;
+  }
 }
 .pane-horizontal-rule {
   border-bottom: 1px solid #adcde5;
